refactor(basic-3.8): update CSS with separation selectors and properties

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 .header img {
   width: 100%;
 }
-.header .header__more-info {
+.header,
+.header__more-info {
   font-family: fantasy, cursive;
 }
 
@@ -39,10 +40,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3{
+li,
+h3 {
   list-style: none;
 }
-input,button{
+input,
+button {
   outline: none;
 }
 button {
@@ -115,7 +118,7 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 button.delete img {
